# slide-rules-generator

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  Scale.js  Tick.js  Tick.ts  cabal.project  compile  compile-watch  index.html  old.ts  package.json  script.ts  sliderules.cabal
app/: Main.hs  WebInterface.hs
fonts/cnc/: lisezmoi.txt  readme.txt
fonts/ocr/ocr-0.2/: Makefile.am  Makefile.in  OCRA.afm  OCRA.pfb  OCRB.afm  OCRB.pfb  OCRBE.afm  OCRBE.pfb  OCRBF.afm  OCRBF.pfb  OCRBL.afm  OCRBL.pfb  OCRBS.afm  OCRBS.pfb  OCRBX.afm  OCRBX.pfb  aclocal.m4  configure  configure.ac  fntbase.mp  mp2pf  msk-ocra.mp  msk-ocra10.mp  msk-ocrb10.mp  msk-ocrb10ebg.mp  msk-ocrb10efg.mp  msk-ocrb10fbg.mp  msk-ocrb10ffg.mp  msk-ocrb10g.mp  msk-ocrb10l.mp  msk-ocrb10s.mp  msk-ocrb10xbg.mp  msk-ocrb10xfg.mp  msk-ocrbdef.mp  msk-ocrbmac.mp  ocr.tex  ocra-no.pe  ocra-yes.pe  ocra.fea  ocrb-no.pe  (+4 more)
fonts/ocr/ocr-0.2/m4/: ax_am_jobserver.m4
haskell/: Main.hs  NewMain.hs  OldMain.hs  TypeMagicShenanigans.hs  autorender  autoview  cabal.project  haskell.cabal
rust/sliderules/: Cargo.toml  index.html
rust/sliderules/src/: lib.rs
rust/sliderules/www/: fonts  index.html  index.ts  package.json  tsconfig.json
sliderules-hs/: sliderules.cabal
sliderules-hs/app/: Main.hs
sliderules-hs/src/: SlideRules.hs
sliderules-hs/src/SlideRules/: Generator.hs  IO.hs  Lenses.hs  Partitions.hs  Scales.hs  Tick.hs  Transformations.hs  Types.hs  Utils.hs
sliderules2/: Cargo.toml
sliderules2/src/: lib.rs
sliderules2/www/: Main.tsx  bootstrap.js  index.html  index.ts  package.json  tsconfig.json  webpack.config.js
src/: SlideRules.hs
src/SlideRules/: FastSVG.hs  FasterSVG.hs  Generator.hs  IO.hs  Partitions.hs  Renderer.hs  Scales.hs  SerializableGenerator.hs  Tick.hs  Transformations.hs  Types.hs  Utils.hs
src/SlideRules/Renderer/: Diagrams.hs  FastSVG.hs  FasterSVG.hs
ts/: Globals.js  Globals.ts  Scale.ts  Tick.js  Tick.ts  compile  index.html  package.json  script.ts  tsconfig.json
ts/prev_attempts/: old.js
wasm/: a.out  a.out.build.js  a.out.js  a.out.wasm  compile  index.html  main.c
web-interface/: app.js  index.html  polyfill.min.js  style.css
